// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav renders all list item types (locked=false) 1`] = `
<nav
  aria-label="Navigation"
  className="viewer--components--nav is-not-locked is-not-open is-enabled is-not-red-alert"
  role="navigation"
  tabIndex="-1"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center skip-nav-button"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Skip Navigation
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      RED ALERT
    </button>
  </div>
  <button
    className="toggle-button"
    onClick={[MockFunction]}
  >
    Toggle Navigation Menu
  </button>
  <ul
    aria-hidden={true}
    tabIndex="-1"
  >
    <li
      className="heading is-not-selected"
    >
      label4
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to label5"
      >
        label5
      </button>
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to Mock Content Type label300"
      >
        label300
      </button>
    </li>
    <li
      className="sub-link is-not-selected is-not-correct is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Jump to label301 inside Parent Label"
      >
        label301
      </button>
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to mockMe"
      >
        mockMe
      </button>
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to "
      />
    </li>
    <li
      className="link is-selected is-complete is-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Currently on label56"
      >
        label56
      </button>
    </li>
    <li
      className="sub-link is-not-selected is-not-correct is-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Jump to label6"
      >
        label6
      </button>
    </li>
  </ul>
  <div
    className="viewer--components--logo is-not-inverted"
    onClick={[Function]}
  >
    Obojobo
  </div>
</nav>
`;

exports[`Nav renders all list item types (locked=true) 1`] = `
<nav
  aria-label="Navigation"
  className="viewer--components--nav is-locked is-not-open is-enabled is-not-red-alert"
  role="navigation"
  tabIndex="-1"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center skip-nav-button"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Skip Navigation
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      RED ALERT
    </button>
  </div>
  <button
    className="toggle-button"
    onClick={[MockFunction]}
  >
    Toggle Navigation Menu
  </button>
  <ul
    aria-hidden={true}
    tabIndex="-1"
  >
    <li
      className="heading is-not-selected"
    >
      label4
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to label5"
      >
        label5
      </button>
      <div
        className="lock-icon"
      />
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to Mock Content Type label300"
      >
        label300
      </button>
      <div
        className="lock-icon"
      />
    </li>
    <li
      className="sub-link is-not-selected is-not-correct is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Jump to label301 inside Parent Label"
      >
        label301
      </button>
      <div
        className="lock-icon"
      />
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to mockMe"
      >
        mockMe
      </button>
      <div
        className="lock-icon"
      />
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to "
      />
      <div
        className="lock-icon"
      />
    </li>
    <li
      className="link is-selected is-complete is-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Currently on label56"
      >
        label56
      </button>
      <div
        className="lock-icon"
      />
    </li>
    <li
      className="sub-link is-not-selected is-not-correct is-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Jump to label6"
      >
        label6
      </button>
      <div
        className="lock-icon"
      />
    </li>
  </ul>
  <div
    className="viewer--components--logo is-not-inverted"
    onClick={[Function]}
  >
    Obojobo
  </div>
</nav>
`;

exports[`Nav renders assessment information with score 1`] = `
<nav
  aria-label="Navigation"
  className="viewer--components--nav is-not-locked is-open is-enabled is-not-red-alert"
  role="navigation"
  tabIndex="-1"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center skip-nav-button"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      Skip Navigation
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      RED ALERT
    </button>
  </div>
  <button
    className="toggle-button"
    onClick={[MockFunction]}
  >
    Toggle Navigation Menu
  </button>
  <ul
    aria-hidden={false}
    tabIndex="-1"
  >
    <li
      className="link is-not-selected is-not-complete is-not-correct is-assessment is-first-in-list is-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={false}
        aria-label="Go to label"
      >
        label
      </button>
      <span
        className="assessment-info"
      >
        60% - 2 attempts remaining
      </span>
    </li>
  </ul>
  <div
    className="viewer--components--logo is-not-inverted"
    onClick={[Function]}
  >
    Obojobo
  </div>
</nav>
`;

exports[`Nav renders assessment information with singular attempt 1`] = `
<nav
  aria-label="Navigation"
  className="viewer--components--nav is-not-locked is-open is-enabled is-not-red-alert"
  role="navigation"
  tabIndex="-1"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center skip-nav-button"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      Skip Navigation
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      RED ALERT
    </button>
  </div>
  <button
    className="toggle-button"
    onClick={[MockFunction]}
  >
    Toggle Navigation Menu
  </button>
  <ul
    aria-hidden={false}
    tabIndex="-1"
  >
    <li
      className="link is-not-selected is-not-complete is-not-correct is-assessment is-first-in-list is-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={false}
        aria-label="Go to label"
      >
        label
      </button>
      <span
        className="assessment-info"
      >
        1 attempt remaining
      </span>
    </li>
  </ul>
  <div
    className="viewer--components--logo is-not-inverted"
    onClick={[Function]}
  >
    Obojobo
  </div>
</nav>
`;

exports[`Nav renders assessment information with unlimited attempts 1`] = `
<nav
  aria-label="Navigation"
  className="viewer--components--nav is-not-locked is-open is-enabled is-not-red-alert"
  role="navigation"
  tabIndex="-1"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center skip-nav-button"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      Skip Navigation
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      RED ALERT
    </button>
  </div>
  <button
    className="toggle-button"
    onClick={[MockFunction]}
  >
    Toggle Navigation Menu
  </button>
  <ul
    aria-hidden={false}
    tabIndex="-1"
  >
    <li
      className="link is-not-selected is-not-complete is-not-correct is-assessment is-first-in-list is-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={false}
        aria-label="Go to label"
      >
        label
      </button>
      <span
        className="assessment-info"
      >
        Unlimited attempts
      </span>
    </li>
  </ul>
  <div
    className="viewer--components--logo is-not-inverted"
    onClick={[Function]}
  >
    Obojobo
  </div>
</nav>
`;

exports[`Nav renders assessment information without score 1`] = `
<nav
  aria-label="Navigation"
  className="viewer--components--nav is-not-locked is-open is-enabled is-not-red-alert"
  role="navigation"
  tabIndex="-1"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center skip-nav-button"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      Skip Navigation
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      RED ALERT
    </button>
  </div>
  <button
    className="toggle-button"
    onClick={[MockFunction]}
  >
    Toggle Navigation Menu
  </button>
  <ul
    aria-hidden={false}
    tabIndex="-1"
  >
    <li
      className="link is-not-selected is-not-complete is-not-correct is-assessment is-first-in-list is-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={false}
        aria-label="Go to label"
      >
        label
      </button>
      <span
        className="assessment-info"
      >
        2 attempts remaining
      </span>
    </li>
  </ul>
  <div
    className="viewer--components--logo is-not-inverted"
    onClick={[Function]}
  >
    Obojobo
  </div>
</nav>
`;

exports[`Nav renders blank title 1`] = `
<nav
  aria-label="Navigation"
  className="viewer--components--nav is-not-locked is-not-open is-enabled is-not-red-alert"
  role="navigation"
  tabIndex="-1"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center skip-nav-button"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Skip Navigation
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      RED ALERT
    </button>
  </div>
  <button
    className="toggle-button"
    onClick={[MockFunction]}
  >
    Toggle Navigation Menu
  </button>
  <ul
    aria-hidden={true}
    tabIndex="-1"
  >
    <li
      className="heading is-not-selected"
    >
       
    </li>
  </ul>
  <div
    className="viewer--components--logo is-not-inverted"
    onClick={[Function]}
  >
    Obojobo
  </div>
</nav>
`;

exports[`Nav renders closed 1`] = `
<nav
  aria-label="Navigation"
  className="viewer--components--nav is-locked is-open is-enabled is-not-red-alert"
  role="navigation"
  tabIndex="-1"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center skip-nav-button"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      Skip Navigation
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      RED ALERT
    </button>
  </div>
  <button
    className="toggle-button"
    onClick={[MockFunction]}
  >
    Toggle Navigation Menu
  </button>
  <ul
    aria-hidden={false}
    tabIndex="-1"
  />
  <div
    className="viewer--components--logo is-not-inverted"
    onClick={[Function]}
  >
    Obojobo
  </div>
</nav>
`;

exports[`Nav renders opened 1`] = `
<nav
  aria-label="Navigation"
  className="viewer--components--nav is-locked is-not-open is-enabled is-not-red-alert"
  role="navigation"
  tabIndex="-1"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center skip-nav-button"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Skip Navigation
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      RED ALERT
    </button>
  </div>
  <button
    className="toggle-button"
    onClick={[MockFunction]}
  >
    Toggle Navigation Menu
  </button>
  <ul
    aria-hidden={true}
    tabIndex="-1"
  />
  <div
    className="viewer--components--logo is-not-inverted"
    onClick={[Function]}
  >
    Obojobo
  </div>
</nav>
`;

exports[`Nav renders red alert classes appropriately (redAlert = false) 1`] = `
<nav
  aria-label="Navigation"
  className="viewer--components--nav is-not-locked is-not-open is-enabled is-not-red-alert"
  role="navigation"
  tabIndex="-1"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center skip-nav-button"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Skip Navigation
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      RED ALERT
    </button>
  </div>
  <button
    className="toggle-button"
    onClick={[MockFunction]}
  >
    Toggle Navigation Menu
  </button>
  <ul
    aria-hidden={true}
    tabIndex="-1"
  >
    <li
      className="heading is-not-selected"
    >
      label4
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to label5"
      >
        label5
      </button>
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to Mock Content Type label300"
      >
        label300
      </button>
    </li>
    <li
      className="sub-link is-not-selected is-not-correct is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Jump to label301 inside Parent Label"
      >
        label301
      </button>
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to mockMe"
      >
        mockMe
      </button>
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to "
      />
    </li>
    <li
      className="link is-not-selected is-complete is-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to label56"
      >
        label56
      </button>
    </li>
    <li
      className="sub-link is-not-selected is-not-correct is-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Jump to label6"
      >
        label6
      </button>
    </li>
  </ul>
  <div
    className="viewer--components--logo is-not-inverted"
    onClick={[Function]}
  >
    Obojobo
  </div>
</nav>
`;

exports[`Nav renders red alert classes appropriately (redAlert=true) 1`] = `
<nav
  aria-label="Navigation"
  className="viewer--components--nav is-not-locked is-not-open is-enabled is-red-alert"
  role="navigation"
  tabIndex="-1"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center skip-nav-button"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Skip Navigation
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      RED ALERT
    </button>
  </div>
  <button
    className="toggle-button"
    onClick={[MockFunction]}
  >
    Toggle Navigation Menu
  </button>
  <ul
    aria-hidden={true}
    tabIndex="-1"
  >
    <li
      className="heading is-not-selected"
    >
      label4
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to label5"
      >
        label5
      </button>
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to Mock Content Type label300"
      >
        label300
      </button>
    </li>
    <li
      className="sub-link is-not-selected is-not-correct is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Jump to label301 inside Parent Label"
      >
        label301
      </button>
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to mockMe"
      >
        mockMe
      </button>
    </li>
    <li
      className="link is-not-selected is-not-complete is-not-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to "
      />
    </li>
    <li
      className="link is-not-selected is-complete is-correct is-not-assessment is-not-first-in-list is-not-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Go to label56"
      >
        label56
      </button>
    </li>
    <li
      className="sub-link is-not-selected is-not-correct is-last-in-list"
      onClick={[Function]}
    >
      <button
        aria-disabled={true}
        aria-label="Jump to label6"
      >
        label6
      </button>
    </li>
  </ul>
  <div
    className="viewer--components--logo is-not-inverted"
    onClick={[Function]}
  >
    Obojobo
  </div>
</nav>
`;

exports[`Nav renders unlocked 1`] = `
<nav
  aria-label="Navigation"
  className="viewer--components--nav is-not-locked is-not-open is-enabled is-not-red-alert"
  role="navigation"
  tabIndex="-1"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center skip-nav-button"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Skip Navigation
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
    contentEditable={false}
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
      type="button"
    >
      RED ALERT
    </button>
  </div>
  <button
    className="toggle-button"
    onClick={[MockFunction]}
  >
    Toggle Navigation Menu
  </button>
  <ul
    aria-hidden={true}
    tabIndex="-1"
  />
  <div
    className="viewer--components--logo is-not-inverted"
    onClick={[Function]}
  >
    Obojobo
  </div>
</nav>
`;
